--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "Save Restricted Content Bot by Team SPY",
   "logo": "https://lh3.googleusercontent.com/-HPcn7AqepNg/AAAAAAAAAAI/AAAAAAAAAAA/ALKGfknb1BkQiq-8_KUVOYcNAJ4swKivDQ/photo.jpg",
   "keywords": ["python3", "telegram", "MusicBot", "telegram-bot", "pyrogram"],
-  "repository": "https://github.com/devgaganin/save_restricted-content-telegram-bot-repo",
+  "repository": "https://github.com/Saghjsjjshsjs/Save-restricted-content-bot-repo",
   "success_url": "https://devgagan.in",
   "env": {
     "API_ID": {
@@ -23,7 +23,7 @@
     },
     "MONGO_DB": {
       "description": "Get a mongodb url from https://cloud.mongodb.com.",
-      "value": "mongodb+srv://ggn:ggn@ggn.upuljx5.mongodb.net/?retryWrites=true&w=majority&appName=ggn",
+      "value": "mongodb+srv://dharmendrasaini4435:sahilkhan@cluster0.pcbftgb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0",
       "required": true
     },
     "OWNER_ID": {
